--- a/templates/error.html
+++ b/templates/error.html
@@ -23,7 +23,6 @@
 {% endblock %}
 
 {% block main %}
-<!-- TODO: Check styles and stuff -->
 <!-- Error message -->
 <div id="error-box" class="box">
     <div id="error-content">
@@ -40,7 +39,7 @@
         </div>
 
         <div class="block mb-4 mt-6">
-            <a class="button is-link is-light" href="{{ url_for('index') }}">
+            <a class="button is-link" href="{{ url_for('index') }}">
                 <span class="icon is-small">
                         <i class="mdi mdi-restart"></i>
                     </span>
