Added screenshot of analysis page to readme

--- a/app/templates/analysis.html
+++ b/app/templates/analysis.html
@@ -18,15 +18,15 @@
 <!-- Charts -->
 <div class="columns is-desktop mx-2">
     <div class="column m-2 p-5 box">
-        <h3 class="center">Amount of feedback, N</h3>
+        <h4 class="center">Number of feedback (N)</h4>
         <canvas id="n-feedback"></canvas>
     </div>
     <div class="column m-2 p-5 box">
-        <h3 class="center">Overall sentiment %</h3>
+        <h4 class="center">Overall sentiment (%)</h4>
         <canvas id="overall-pie"></canvas>
     </div>
     <div class="column m-2 p-5 box">
-        <h3 class="center">Sentiment by Topic %</h3>
+        <h4 class="center">Sentiment by topic (%)</h4>
         <canvas id="topic-sentiment-bar" style="max-height: 200px;"></canvas>
     </div>
 </div>
